# rustgie

./: .gitignore  Cargo.toml  README.md
.github/: FUNDING.yml
rustgie/: Cargo.toml  README.md
rustgie/src/: endpoints.rs  lib.rs
rustgie_types/: Cargo.toml  README.md
rustgie_types/src/: api_response_.rs  lib.rs  rustgie_stuff_.rs
rustgie_types/src/applications/: mod.rs
rustgie_types/src/common/: mod.rs
rustgie_types/src/common/models/: mod.rs
rustgie_types/src/components/: mod.rs
rustgie_types/src/config/: mod.rs
rustgie_types/src/config/clan_banner/: mod.rs
rustgie_types/src/content/: mod.rs
rustgie_types/src/content/models/: mod.rs
rustgie_types/src/dates/: mod.rs
rustgie_types/src/destiny/: mod.rs
rustgie_types/src/destiny/activities/: mod.rs
rustgie_types/src/destiny/advanced/: mod.rs
rustgie_types/src/destiny/artifacts/: mod.rs
rustgie_types/src/destiny/challenges/: mod.rs
rustgie_types/src/destiny/character/: mod.rs
rustgie_types/src/destiny/components/: mod.rs
rustgie_types/src/destiny/components/collectibles/: mod.rs
rustgie_types/src/destiny/components/craftables/: mod.rs
rustgie_types/src/destiny/components/inventory/: mod.rs
rustgie_types/src/destiny/components/items/: mod.rs
rustgie_types/src/destiny/components/kiosks/: mod.rs
rustgie_types/src/destiny/components/loadouts/: mod.rs
rustgie_types/src/destiny/components/metrics/: mod.rs
rustgie_types/src/destiny/components/plug_sets/: mod.rs
rustgie_types/src/destiny/components/presentation/: mod.rs
rustgie_types/src/destiny/components/profiles/: mod.rs
rustgie_types/src/destiny/components/records/: mod.rs
rustgie_types/src/destiny/components/social/: mod.rs
rustgie_types/src/destiny/components/string_variables/: mod.rs
rustgie_types/src/destiny/components/vendors/: mod.rs
rustgie_types/src/destiny/config/: mod.rs
rustgie_types/src/destiny/constants/: mod.rs
rustgie_types/src/destiny/definitions/: mod.rs
rustgie_types/src/destiny/definitions/activity_modifiers/: mod.rs
rustgie_types/src/destiny/definitions/animations/: mod.rs
rustgie_types/src/destiny/definitions/artifacts/: mod.rs
rustgie_types/src/destiny/definitions/breaker_types/: mod.rs
rustgie_types/src/destiny/definitions/checklists/: mod.rs
rustgie_types/src/destiny/definitions/collectibles/: mod.rs
rustgie_types/src/destiny/definitions/common/: mod.rs
rustgie_types/src/destiny/definitions/director/: mod.rs
rustgie_types/src/destiny/definitions/energy_types/: mod.rs
rustgie_types/src/destiny/definitions/guardian_ranks/: mod.rs
rustgie_types/src/destiny/entities/: mod.rs
rustgie_types/src/destiny/historical_stats/: mod.rs
rustgie_types/src/destiny/milestones/: mod.rs
rustgie_types/src/destiny/misc/: mod.rs
rustgie_types/src/destiny/perks/: mod.rs
rustgie_types/src/destiny/progression/: mod.rs
rustgie_types/src/destiny/quests/: mod.rs
rustgie_types/src/destiny/reporting/: mod.rs
rustgie_types/src/destiny/requests/: mod.rs
rustgie_types/src/destiny/responses/: mod.rs
rustgie_types/src/destiny/sockets/: mod.rs
rustgie_types/src/destiny/vendors/: mod.rs
rustgie_types/src/entities/: mod.rs
rustgie_types/src/exceptions/: mod.rs
rustgie_types/src/fireteam/: mod.rs
rustgie_types/src/forum/: mod.rs
rustgie_types/src/forums/: mod.rs
rustgie_types/src/groups_v2/: mod.rs
rustgie_types/src/ignores/: mod.rs
rustgie_types/src/interpolation/: mod.rs
rustgie_types/src/links/: mod.rs
rustgie_types/src/queries/: mod.rs
rustgie_types/src/social/: mod.rs
rustgie_types/src/social/friends/: mod.rs
rustgie_types/src/streaming/: mod.rs
rustgie_types/src/tags/models/: mod.rs
rustgie_types/src/tokens/: mod.rs
rustgie_types/src/trending/: mod.rs
rustgie_types/src/user/: mod.rs
rustgie_types/src/user/models/: mod.rs
(+25 files in other folders)
