[package]
name = "rustgie"
version = "0.2.0"
authors = ["ashakoor"]
edition = "2021"
description = "A Bungie.net API client."
repository = "https://github.com/ashakoor/rustgie/"
license = "MIT OR Apache-2.0"
keywords = ["bungie", "destiny", "destiny2"]
categories = ["api-bindings"]

[dependencies]
rustgie_types = { path = "../rustgie_types", version = "0.2.0" }
reqwest = { version = "0.11.13", features = ["json", "gzip", "deflate", "brotli", "cookies"] }
serde = "1.0.148"
time = "0.3.17"

[features]
rustls = ["reqwest/rustls"]