[package]
name = "rustgie"
version = "0.3.0-beta"
authors = ["ashakoor"]
edition = "2021"
description = "A Bungie.net API client."
repository = "https://github.com/ashakoor/rustgie/"
license = "MIT OR Apache-2.0"
keywords = ["bungie", "destiny", "destiny2"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0"
rustgie_types = { path = "../rustgie_types", version = "0.3.0-beta" }
reqwest = { version = "0.11", features = ["json", "gzip", "deflate", "brotli", "cookies"] }
serde = "1.0"
time = "0.3"

[features]
rustls = ["reqwest/rustls"]