[package]
name = "rustgie"
version = "0.3.0-beta"
authors = ["ashakoor"]
edition = "2021"
rust-version = "1.60"
description = "A Bungie.net API client."
repository = "https://github.com/ashakoor/rustgie/"
license = "MIT OR Apache-2.0"
keywords = ["bungie", "destiny", "destiny2"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0"
rustgie_types = { path = "../rustgie_types", version = "0.3.0-beta" }
reqwest = { version = "0.11", features = ["json"] }
serde = "1.0"
time = "0.3"

[features]
default = ["cookies", "gzip"]
brotli = ["reqwest/brotli"]
cookies = ["reqwest/cookies"]
deflate = ["reqwest/deflate"]
gzip = ["reqwest/gzip"]
rustls = ["reqwest/rustls"]
