[package]
name = "rustgie_types"
version = "0.2.0"
authors = ["ashakoor"]
edition = "2021"
description = "Types for rustgie."
repository = "https://github.com/ashakoor/rustgie/"
license = "MIT OR Apache-2.0"
keywords = ["bungie", "destiny", "destiny2"]
categories = ["api-bindings"]

[dependencies]
enumflags2 = { version = "0.7.5", features = ["serde"] }
serde = { version = "1.0.148", features = ["serde_derive"] }
serde_json = "1.0.89"
serde_repr = "0.1.9"
serde_with = { version = "2.1.0", features = ["json"] }
time = { version = "0.3.17", features = ["serde", "serde-well-known"] }