[package]
name = "rustgie_types"
version = "0.3.0-beta"
authors = ["ashakoor"]
edition = "2021"
rust-version = "1.60"
description = "Types for rustgie."
repository = "https://github.com/ashakoor/rustgie/"
license = "MIT OR Apache-2.0"
keywords = ["bungie", "destiny", "destiny2"]
categories = ["api-bindings"]

[dependencies]
anyhow = "1.0"
enumflags2 = { version = "0.7", features = ["serde"] }
serde = { version = "1.0", features = ["serde_derive"] }
serde_json = "1.0"
serde_repr = "0.1"
serde_with = { version = "2.1", features = ["json"] }
time = { version = "0.3", features = ["serde", "serde-well-known"] }
